2000-11-14  Petr Mikulik  <mikulik@physics.muni.cz>

	* make the branched version compile under OS/2

2000-11-12  James R. Van Zandt  <jrv@vanzandt.mv.com>

	* term/README: describe pm3d and mouse API

	* term/cgm.trm: add pm3d support.

2000-11-10  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/gnuplot.opt: added new sourcefiles to the list.

	* config/makefile.nt: adapted to 3.8 source layout, pm3d enabled.

2000-11-09  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/color.c, src/pm3d.c: allow pm3d compile without pslatex

2000-11-08  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/hidden3d.c (split_line_at_ratio): Changed parameters.
	(draw_edge): Changed parameters.
	(handle_edge_fragment): Changed parameters. Avoid checking same
 	polygon against the recursing edge again. Don't allocate fresh
 	edge.
	(in_front): Changed parameters. Don't modify contents of 'edge'
 	passed in. Rather pass around vertex data separately. Revised some
 	of the tests to fix almost all currently known display bugs.

2000-11-08  Johannes Zellner  <johannes@zellner.org>

	* docs/gnuplot.doc, pm3d/README: included tgif as supported

2000-11-07  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/specfun.c (f_lambertw): set 'undefined' to TRUE
	if lambertw returns error condition.

	* src/specfun.c (lambertw): restructured a bit, removed fall-off
 	without a return value, avoided FP equality comparison.

2000-11-07  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	From Gunter Kuhnle <gunter@tux.biow.uni-leipzig.de>:

	* src/specfun.c (f_lambertw): new function.
	(lambertw): new function.

	* src/eval.c (ft): added entry for lambertw

	* docs/gnuplot.doc: document new function lambertw

2000-11-07  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* demo/Makefile.am.in: Use variables in place of "gnuplot" (GNUPLOT)
	and "all.dem" (DEMO) to allow more fine-grained control over what is
	run with "make check". Regenerate Makefile.am.
